--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   change_app_package_name: ^1.4.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
