--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.3.1
   change_app_package_name: ^1.4.0
   percent_indicator: ^4.2.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
