--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Comfortaa
+      fonts:
+        - asset: fonts/Comfortaa-Regular.ttf
+        - asset: fonts/Comfortaa-Bold.ttf
+        - asset: fonts/Comfortaa-Medium.ttf
+        - asset: fonts/Comfortaa-Light.ttf
+        - asset: fonts/Comfortaa-SemiBold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
