--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   change_app_package_name: ^1.4.0
   percent_indicator: ^4.2.3
   carousel_slider: ^5.0.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
