--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   percent_indicator: ^4.2.3
   carousel_slider: ^5.0.0
   intl: ^0.20.1
+  cloud_firestore: ^5.5.1
+  firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
