--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_storage: ^12.3.7
   firebase_auth: ^5.4.1
   cloud_firestore: ^5.6.2
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
