--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   path_provider: ^2.1.5
   shared_preferences: ^2.5.2
   cached_network_image: ^3.4.1
+  translator: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
