--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.4.1
   translator: ^1.0.3+1
   fl_chart: ^0.70.2
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
