--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,7 +41,7 @@ dependencies:
   change_app_package_name: ^1.4.0
   percent_indicator: ^4.2.3
   carousel_slider: ^5.0.0
-  intl: ^0.20.1
+  intl: ^0.19.0
   firebase_storage: ^12.3.7
   firebase_auth: ^5.4.1
   cloud_firestore: ^5.6.2
