--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,15 @@ dependencies:
   connectivity_plus: ^6.1.3
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
